<resources>
    <string name="app_name">Demo</string>
    <string name="button1">Button Click</string>
    <string name="button2">Back to MainActivity</string>
    <string name="meun_title">Menu</string>
    <string name="remove_menu">move</string>
    <string name="exit_app">exit_app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="request_network">Request Network</string>
    <string name="response_here">Response here</string>
    <string name="strat_download">Strat Download</string>
    <string name="pause_download">Pause Download</string>
    <string name="cancle_download">Cancle Download</string>
    <string name="download_text">下载URL: http://img01.oneniceapp.com/app/nice-main-4.8.6-release.apk\n本地下载地址: /sdcard/Download/</string>
    <string name="service_crash">子线程直接更新UI会闪退</string>
    <string name="original_text">Original Text</string>
    <string name="change_text">Change Text to your define</string>
    <string name="hanler">hanler异步消息处理</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="bind_service">Bind Service</string>
    <string name="unbind_service">Unbind Service</string>

</resources>
