<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.johnhao.demo.activity.ServiceTestActivity">

    <Button
        android:id="@+id/service_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:text="@string/start_service"/>

    <Button
        android:id="@+id/service_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:text="@string/stop_service"/>

    <Button
        android:id="@+id/service_bind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:text="@string/bind_service"/>

    <Button
        android:id="@+id/service_unbind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:text="@string/unbind_service"/>

</LinearLayout>
